; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_splice.c_spd_release_page.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_splice.c_spd_release_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.splice_pipe_desc = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @spd_release_page(%struct.splice_pipe_desc* %0, i32 %1) #0 {
  %3 = alloca %struct.splice_pipe_desc*, align 8
  %4 = alloca i32, align 4
  store %struct.splice_pipe_desc* %0, %struct.splice_pipe_desc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.splice_pipe_desc*, %struct.splice_pipe_desc** %3, align 8
  %6 = getelementptr inbounds %struct.splice_pipe_desc, %struct.splice_pipe_desc* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = zext i32 %8 to i64
  %10 = getelementptr inbounds i32, i32* %7, i64 %9
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @page_cache_release(i32 %11)
  ret void
}

declare dso_local i32 @page_cache_release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
